bin_PROGRAMS=twitturse
twitturse_SOURCES=config.c config.h curl.c curl.h init.c init.h main.c ncurse.c ncurse.h status.c status.h utils.c utils.h
twitturse_CFLAGS=-g -W -lncurses -lform -lmenu -lcurl -lpthread `xml2-config --cflasg --libs`
twitturse_LDFLAGS=-g -W -lncurses -lform -lmenu -lcurl -lpthread `xml2-config --cflasg --libs`
